<resources>
    <plurals name="jobs">
        <item quantity="one">job</item>
        <item quantity="other">jobs</item>
    </plurals>
    <string name="app_name">Oilee</string>
    <string name="stripe_publishable_key">pk_test_yEZPjbVMENO4uSAsOksXu6kr</string>
    <string name="sign_up_option_text">Are you signing up as a customer or technician?</string>
    <string name="i_m_customer">I\'m a Customer!</string>
    <string name="i_m_technitian">I\'m a Technician!</string>
    <string name="jump_into_app">Jump into the app</string>
    <string name="login_signup">Login/Signup</string>
    <string name="get_car_oil_changed">Get your vehicle oil changed</string>
    <string name="trusted_technicians">Trusted technicians a click away!</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="welcome_to_your_oilee_profile">Welcome to your Oilee profile!</string>
    <string name="tell_us_basics">Tell us the basics.</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="oilee_history">Oilee History</string>
    <string name="saved_payments">Saved Payments</string>
    <string name="saved_vehicles">Saved Vehicles</string>
    <string name="saved_addresses">Saved Locations</string>
    <string name="invite_people">Invite People</string>
    <string name="schedule_a_reminder">Schedule a Reminder</string>
    <string name="faq">FAQs</string>
    <string name="about_us">About Us</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="request_oil_change">Request Oil Change</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="saved_cars">Saved Vehicles</string>
    <string name="no_saved_cars">No vehicle saved yet.</string>
    <string name="add_new_vehicle">Add new vehicle</string>
    <string name="add_new_address">Add new location</string>
    <string name="no_saved_locations">No locations saved yet.</string>
    <string name="address_unavailable">Location unavailable.</string>
    <string name="save_changes">Save Changes</string>
    <string name="search_for_questions">Search for questions…</string>
    <string name="faqs">FAQs</string>
    <string name="popular">Popular</string>
    <string name="others">Others</string>
    <string name="lorem_ipsum_demo">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It has survived not only five centuries, but also the leap.</string>
    <string name="submit">Submit</string>
    <string name="apologies">Apologies</string>
    <string name="report_issue_text">Please tell us a little more about the issue you had with your most recent Oilee service.</string>
    <string name="tell_us_more">Tell us a little more</string>
    <string name="explain_in_brief">Please explain in brief.</string>
    <string name="add_photos">Add Photos</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="next_reminder">Next Reminder</string>
    <string name="change">Change</string>
    <string name="reminder_date">Reminder Date</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="steps">Steps</string>
    <string name="no_address_yet">No Location Yet</string>
    <string name="select_address">Select Location</string>
    <string name="add_address">Add Location</string>
    <string name="save_address">Save Location</string>
    <string name="address">Address</string>
    <string name="secondary_address">Secondary Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="add_tag_for_future">Add Tag for Future</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="work">Work</string>
    <string name="field_blank_error">Field can not be left blank.</string>
    <string name="no_vehicle_yet">No vehicle saved yet</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="current_mileage">Current Mileage</string>
    <string name="color">Color</string>
    <string name="sub_model">Sub Model</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="licence_plate">Licence Plate</string>
    <string name="car_details">Vehicle Details</string>
    <string name="select_date">Select Date</string>
    <string name="next">Next</string>
    <string name="select_time_slot">Select Time Slot</string>
    <string name="select_date_time"><![CDATA[Select Date & Time]]></string>
    <string name="select_oil_packages">Select Oil Packages</string>
    <string name="blended_oil">Blended Oil</string>
    <string name="synthetic_oil">Synthetic Oil</string>
    <string name="special_request">Special Request</string>
    <string name="special_request_subtitle">Please provide the info in the case of older vehicles, hi-end sports vehicles etc.</string>
    <string name="let_technician_decide">Let the technician decide</string>
    <string name="technician_decide_subtitle">In the case you don\'t know the requirement of oil.</string>
    <string name="special_request_title">Tell us about your special request</string>
    <string name="special_request_subheading">I am having lamborghini aventador that need more oil than the normally using vehicle and high quality of synthetic oil.</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="notes_for_technician">Notes for Technician</string>
    <string name="add_a_note">Add a note</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="add_instructions">Add Instructions</string>
    <string name="enter_your_instruction">Enter your instruction</string>
    <string name="cost">Cost</string>
    <string name="booking_charge">Booking Charge</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text">The booking charge will be applied to the total cost of your Oilee Service.</string>
    <string name="service_information">Service Information</string>
    <string name="edit_details">Edit Details</string>
    <string name="oilee_summary">Oilee Summary</string>
    <string name="select_paymenet_method">Select Payment Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_new_payment_method">Add New Payment Method</string>
    <string name="my_oilee_history">My Oilee History</string>
    <string name="confirmation">Confirmation</string>
    <string name="oilee_service">Oilee Service</string>
    <string name="server_timeout">Connection timed out. Try again later.</string>
    <string name="internet_not_connected">Internet is not connected.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_text">Enter password to start using the services</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_valid_number">Enter a valid phone number.</string>
    <string name="enter_a_password">Enter a password.</string>
    <string name="forgot_password_subtitle">Please provide your mobile number</string>
    <string name="forgot_password_text">Please enter your mobile number registered on your account.</string>
    <string name="continue_text">Continue</string>
    <string name="create_password">Create Password</string>
    <string name="create_password_subtitle">Please create your login password for the future.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_mismatch">The passwords do not match.</string>
    <string name="password_changed_successfully">Your password has been changed successfully!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_started_by">Get started with your</string>
    <string name="enter_mobile_number_text">Enter your mobile number and we\'ll send you a verification code.</string>
    <string name="Continue">Continue</string>
    <string name="otp_resend_text"><u>Resend Code</u></string>
    <string name="we_sent_you_message">We\'ve sent you a text message!</string>
    <string name="six_digit_code_on">A 6-digit confirmation code has been sent to %s via SMS.</string>
    <string name="enter_valid_otp">Enter a valid OTP.</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="enter_a_name">Enter a name.</string>
    <string name="enter_valid_email">Enter a valid email address.</string>
    <string name="select_your_birthday">Select your birth date.</string>
    <string name="error_sending_otp">Error sending OTP, please try again.</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="otp_resent">OTP has been resent on your number.</string>
    <string name="verified">Verified!</string>
    <string name="no_results_found">No results found!</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="invalid_token">Session expired. Please login again.</string>
    <string name="logged_out_successfully">Logged out successfully!</string>
    <string name="delete">Delete</string>
    <string name="vehicle_added_successfully">Vehicle added successfully</string>
    <string name="vehicle_updated_successfully">Vehicle updated successfully!</string>
    <string name="vehicle_deleted_successfully">Vehicle deleted successfully!</string>
    <string name="okay">Okay</string>
    <string name="welcome_to_your_technician_profile">Welcome to your Technician Profile!</string>
    <string name="no_jobs_available">No jobs available!</string>
    <string name="cant_delete_default_address">You can not delete your default location. Select another location as default first.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload_four_vehicle_images">Upload %d vehicle images</string>
    <string name="upload_vehicle_images_text">Images must be of each corner with the full vehicle in the frame.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="review_time">Review Time</string>
    <string name="review_text">Hang in there while we confirm your profile and required documentation.  You should hear from us in a few days!</string>
</resources>