<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/logout"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/cant_delete_default_address"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/veryDarkGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="1">

            <Button
                android:id="@+id/text_negative"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/no"
                style="@style/AppTheme.DialogGreyButton" />

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/text_positive"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/yes"
                style="@style/AppTheme.DialogButton" />
        </LinearLayout>
    </LinearLayout>
</layout>