<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/logout"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/cant_delete_default_address"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:autoLink="email"
            android:textSize="15sp"
            android:textColor="@color/veryDarkGray"/>

        <Button
            android:id="@+id/text_positive"
            android:layout_width="wrap_content"
            android:text="@string/okay"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_marginTop="20dp"
            style="@style/AppTheme.DialogButton" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>