<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f8fc">

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/main_background_gradient" />

        <include android:id="@+id/my_toolbar"
            layout="@layout/my_toolbar" />

        <Button
            android:id="@+id/special_request_submit"
            style="@style/AppTheme.SubmitButton"
            android:text="@string/submit"
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/my_toolbar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/special_request_title"
                        android:textSize="14sp"
                        android:textColor="#2c285e"
                        android:fontFamily="@font/gordita_regular" />

                    <TextView
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:fontFamily="@font/gordita_regular"
                        android:layout_marginTop="10dp"
                        android:text="@string/special_request_subheading"
                        android:textColor="#192027" />

                    <EditText
                        android:id="@+id/special_request_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/gordita_regular"
                        android:textSize="14sp"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:gravity="start|top"
                        android:hint="@string/enter_text_here"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>