<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/text_upload_images_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_four_vehicle_images"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/gordita_medium"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_upload_images_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/lightBlack"
                android:text="@string/upload_vehicle_images_text"
                android:textSize="13sp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_upload_images_title" />

            <TextView
                android:id="@+id/text_add_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photos"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_upload_images_subtitle"/>

            <LinearLayout
                android:id="@+id/linear_add_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_add_photos" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_submit"
                style="@style/AppTheme.SubmitButton"
                android:text="@string/submit"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_add_photos"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>