<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp">

            <TextView
                android:visibility="invisible"
                android:id="@+id/text_no_jobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_jobs_available"
                android:fontFamily="@font/gordita_regular"
                android:textSize="14sp"
                android:layout_centerInParent="true"/>

            <LinearLayout
                android:visibility="invisible"
                android:id="@+id/linear_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="40dp"
                    android:src="@drawable/technician_review"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/review_time"
                    android:layout_marginTop="40dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/gordita_medium"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/review_text"
                    android:textColor="@color/lightBlack"
                    android:gravity="center"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:visibility="invisible"
                android:id="@+id/linear_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="40dp"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightBlack"
                    android:text="Please grant location permission to start receiving jobs."
                    android:gravity="center_horizontal"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/button_grant_permission"
                    style="@style/AppTheme.SubmitButton"
                    android:layout_marginTop="20dp"
                    android:text="@string/grant_permission" />
             </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/tell_us_basics"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/gordita_regular"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_home_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    tools:text="@string/welcome_to_your_technician_profile"
                    android:fontFamily="@font/gordita_medium"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:visibility="gone"
                    android:id="@+id/recycler_job_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>